--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <img src="images/icon-paper.svg" alt="">
+    <img src="images/bg-triangle.svg" alt="">
+    <img src="images/logo.svg" alt="">
 </body>
 </html>
